--- a/angular.json
+++ b/angular.json
@@ -118,6 +118,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "CapMovieDb"
+    }
+  },
+  "defaultProject": "CapMovieDb",
+  "cli": {
+    "warnings": {
+      "versionMismatch": false
+    }
+  }
 }
